@@ -1,4 +1,5 @@
 AUX truecrypt-stop.sh 308 RMD160 85dbc508e8674a817ea9fdbedd198307c64e5db8 SHA1 a762b61e243aa562e1bbefab5c7ed571c93416e2 SHA256 32f785c0ef77e6e7a4d0f72fa62b824175bb97458df1b6ac60a11e4bb0772bce
 AUX truecrypt.desktop 161 RMD160 49cb2a387c8b551b2c89b7675a48dc78c4d283be SHA1 291569f7783d0ba0bbc2f865361f39871c816f2c SHA256 c1ed83cf908780aa69a49f517b7336b5985c6ee38b067749272191a878a52923
 DIST truecrypt-7.0a.tar.gz 1996312 RMD160 92b01f87c725feb43aded666ba44fcbd3e3ac740 SHA1 42be0f333e6791e7a122b3e1183e014cd3860198 SHA256 6c845153ee868429e2a531407383e9349754d1579cf66fc838632c44baaba021
-EBUILD truecrypt-7.0a-r1.ebuild 2575 RMD160 a9833bab77f1231d6bae225a406fc55406be71d2 SHA1 ca0bf951160ca2e7e11d83df00fd9a6a71cf81ad SHA256 461a61acf6f81e3aeff623e98fc01bd22dbd57b29b7af828ce85c2408059b667
+EBUILD truecrypt-7.0a-r1.ebuild 2773 RMD160 e8a59b9a3243584a64aab6d8617496c869464a00 SHA1 ed281b10e89ebc172d96d774c302d66fc41dcfc7 SHA256 b3b96531b42a4a198e6efa4f7b33a395651dc4350931bcec7a466b5a59dd8f32
+MISC ChangeLog 415 RMD160 ee40c5540325d0d8ee3e649d9f810dce4c640b40 SHA1 421b63c50de0fc3066c4f5866d96d01a9da9dace SHA256 0de44bf8db30bd7d927963b25d73b615ada6d8bb342bcc16ffbc63660c84b901
